# es_experiment

./: es_minimalist.py  pyproject.toml  ruff.toml
src/courses/: __init__.py
