[project]
name = "courses"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Chris May" }
]
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.11.1",
]

[project.scripts]
courses = "courses:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=8.3.5",
]
